[package]
name = "backups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "^0.9.3"
# yaml-rust = {version = "0.5", package = "yaml-rust-davvid"}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chrono = "0.4"